--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <title>dragow_vue</title>
+    <title>Dragow</title>
   </head>
+  <script>
+    window.API_SERVER_URL = 'http://127.0.0.1:8000'
+  </script>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
