get images from server to caroussel

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <script>
     window.API_SERVER_URL = 'http://127.0.0.1:8000'
+    window.IMG_PATH_DRAGONS = window.API_SERVER_URL + '/storage/assets/dragons'
   </script>
   <body>
     <div id="app"></div>
