change files organisation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
     <title>Dragow</title>
   </head>
+  <style>
+  </style>
   <script>
     window.API_SERVER_URL = 'http://127.0.0.1:8000'
     window.IMG_PATH_DRAGONS = window.API_SERVER_URL + '/storage/assets/dragons'
